# aws-demo

./: README.md
agentmemory/: read.py  report-analysis.md  write.py
agentmemory/agentcore/: agentcore.json  aws-targets.json
agentmemory/agentcore/.cli/: deployed-state.json
agentmemory/agentcore/cdk/: package-lock.json
awsagent/: log_analysis_report.md  nohup.out  run.sh  run_agent.py
awsagent/agentcore/: agentcore.json
awsagent/agentcore/.cli/: deployed-state.json
awsagent/agentcore/cdk/: package-lock.json
awsagent/app/awsagent/: README.md  main.py  pyproject.toml
awsagent/app/awsagent/model/: load.py
